bench_err.txt
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.08s
     Running `target\debug\agamc.exe build bench.agam -v`
[agamc] Building 1 file(s)...
[agamc] Optimization level: O0
[agamc] Read bench.agam (1582 bytes)
[agamc] Lexed 335 tokens
[agamc] Parsed 6 declarations
[agamc] Lowered to HIR: 3 functions
[agamc] Lowered to MIR: 3 functions
[agamc] Generated C code: bench.c (3286 bytes)
error: C compilation failed:
bench.c: In function 'agam_optimize_rosenbrock':
bench.c:19:19: error: implicit declaration of function 'agam_println' [-Wimplicit-function-declaration]
   19 |   agam_int __v1 = agam_println(__v0);
      |                   ^~~~~~~~~~~~
bench.c:23:19: error: '__v3' undeclared (first use in this function); did you mean '__v2'?
   23 |   _local_grad_f = __v3;
      |                   ^~~~
      |                   __v2
bench.c:23:19: note: each undeclared identifier is reported only once for each function it appears in
bench.c:31:18: error: '__v9' undeclared (first use in this function); did you mean '__v8'?
   31 |   _local_start = __v9;
      |                  ^~~~
      |                  __v8
bench.c:35:20: error: '_local_numerical' undeclared (first use in this function)
   35 |   agam_int __v12 = _local_numerical;
      |                    ^~~~~~~~~~~~~~~~
bench.c:41:20: error: implicit declaration of function 'agam_adam' [-Wimplicit-function-declaration]
   41 |   agam_int __v18 = agam_adam(__v12, __v13, __v14, __v15, __v16, __v17);
      |                    ^~~~~~~~~
bench.c:48:15: error: '__v23' undeclared (first use in this function); did you mean '__v22'?
   48 |   return (int)__v23;
      |               ^~~~~
      |               __v22
bench.c: In function 'agam_process_dataframe':
bench.c:62:20: error: '_local_ndarray' undeclared (first use in this function)
   62 |   agam_int __v30 = _local_ndarray;
      |                    ^~~~~~~~~~~~~~
bench.c:65:20: error: implicit declaration of function 'agam_arange' [-Wimplicit-function-declaration]
   65 |   agam_int __v33 = agam_arange(__v30, __v31, __v32);
      |                    ^~~~~~~~~~~
bench.c:75:20: error: implicit declaration of function 'agam_map' [-Wimplicit-function-declaration]
   75 |   agam_int __v41 = agam_map(__v39, __v40);
      |                    ^~~~~~~~
bench.c:75:36: error: '__v40' undeclared (first use in this function); did you mean '__v41'?
   75 |   agam_int __v41 = agam_map(__v39, __v40);
      |                                    ^~~~~
      |                                    __v41
bench.c:80:20: error: '_local_dataframe' undeclared (first use in this function)
   80 |   agam_int __v44 = _local_dataframe;
      |                    ^~~~~~~~~~~~~~~~
bench.c:83:20: error: implicit declaration of function 'agam_from_columns' [-Wimplicit-function-declaration]
   83 |   agam_int __v47 = agam_from_columns(__v44, __v45, __v46);
      |                    ^~~~~~~~~~~~~~~~~
bench.c:90:20: error: implicit declaration of function 'agam_filter' [-Wimplicit-function-declaration]
   90 |   agam_int __v52 = agam_filter(__v50, __v51);
      |                    ^~~~~~~~~~~
bench.c:90:39: error: '__v51' undeclared (first use in this function); did you mean '__v52'?
   90 |   agam_int __v52 = agam_filter(__v50, __v51);
      |                                       ^~~~~
      |                                       __v52
bench.c:97:20: error: implicit declaration of function 'agam_mean' [-Wimplicit-function-declaration]
   97 |   agam_int __v57 = agam_mean(__v55, __v56);
      |                    ^~~~~~~~~
bench.c:104:15: error: '__v62' undeclared (first use in this function); did you mean '__v61'?
  104 |   return (int)__v62;
      |               ^~~~~
      |               __v61
bench.c: In function 'main':
bench.c:113:15: error: '__v66' undeclared (first use in this function); did you mean '__v65'?
  113 |   return (int)__v66;
      |               ^~~~~
      |               __v65

error: process didn't exit successfully: `target\debug\agamc.exe build bench.agam -v` (exit code: 1)
